--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "astro": "^5.15.8",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.17"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
