--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.10",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "antd": "^6.0.0",
     "astro": "^5.15.8",
+    "lucide-react": "^0.555.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.17"
   },
