--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sharp": "^0.34.3",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "vite": "^6.0.0"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
